doc: Update source files (en .po), for translations

--- a/documentation/content/en/articles/pam/_index.po
+++ b/documentation/content/en/articles/pam/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2024-12-29 08:30-0500\n"
+"POT-Creation-Date: 2026-02-22 15:58+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -499,11 +499,11 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/pam/_index.adoc:230
 msgid ""
-"[.filename]#pam_nologin.so#, [.filename]#pam_unix.so#, [."
-"filename]#pam_login_access.so#, [.filename]#pam_lastlog.so# and [."
-"filename]#pam_permit.so# are modules. It is clear from this example that [."
-"filename]#pam_unix.so# provides at least two facilities (authentication and "
-"account management.)"
+"[.filename]#pam_nologin.so#, [.filename]#pam_unix.so#, "
+"[.filename]#pam_login_access.so#, [.filename]#pam_lastlog.so# and "
+"[.filename]#pam_permit.so# are modules. It is clear from this example that "
+"[.filename]#pam_unix.so# provides at least two facilities (authentication "
+"and account management.)"
 msgstr ""
 
 #. type: Title ==
@@ -648,12 +648,13 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/pam/_index.adoc:278
 msgid ""
-"FreeBSD implements each mechanism in a single module, named `pam_mechanism."
-"so` (for instance, `pam_unix.so` for the UNIX(R) mechanism.)  Other "
-"implementations sometimes have separate modules for separate facilities, and "
-"include the facility name as well as the mechanism name in the module name.  "
-"To name one example, Solaris(TM) has a `pam_dial_auth.so.1` module which is "
-"commonly used to authenticate dialup users."
+"FreeBSD implements each mechanism in a single module, named "
+"`pam_mechanism.so` (for instance, `pam_unix.so` for the UNIX(R) mechanism.)  "
+"Other implementations sometimes have separate modules for separate "
+"facilities, and include the facility name as well as the mechanism name in "
+"the module name.  To name one example, Solaris(TM) has a "
+"`pam_dial_auth.so.1` module which is commonly used to authenticate dialup "
+"users."
 msgstr ""
 
 #. type: Title ====
@@ -720,7 +721,7 @@ msgstr ""
 #: documentation/content/en/articles/pam/_index.adoc:302
 msgid ""
 "Understanding the control flags is essential to understanding PAM "
-"configuration files.  There are four different control flags:"
+"configuration files.  There are five different control flags:"
 msgstr ""
 
 #. type: Labeled list
@@ -878,8 +879,9 @@ msgstr ""
 #: documentation/content/en/articles/pam/_index.adoc:343
 msgid ""
 "The server calls man:pam_acct_mgmt[3] to verify that the requested account "
-"is available and valid. If the password is correct but has expired, man:"
-"pam_acct_mgmt[3] will return `PAM_NEW_AUTHTOK_REQD` instead of `PAM_SUCCESS`."
+"is available and valid. If the password is correct but has expired, "
+"man:pam_acct_mgmt[3] will return `PAM_NEW_AUTHTOK_REQD` instead of "
+"`PAM_SUCCESS`."
 msgstr ""
 
 #. type: Plain text
@@ -893,17 +895,17 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/pam/_index.adoc:345
 msgid ""
-"Now that the applicant has been properly authenticated, the server calls man:"
-"pam_setcred[3] to establish the credentials of the requested account. It is "
-"able to do this because it acts on behalf of the arbitrator, and holds the "
-"arbitrator's credentials."
+"Now that the applicant has been properly authenticated, the server calls "
+"man:pam_setcred[3] to establish the credentials of the requested account. It "
+"is able to do this because it acts on behalf of the arbitrator, and holds "
+"the arbitrator's credentials."
 msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/articles/pam/_index.adoc:346
 msgid ""
-"Once the correct credentials have been established, the server calls man:"
-"pam_open_session[3] to set up the session."
+"Once the correct credentials have been established, the server calls "
+"man:pam_open_session[3] to set up the session."
 msgstr ""
 
 #. type: Plain text
@@ -916,8 +918,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/pam/_index.adoc:348
 msgid ""
-"Once the server is done serving the client, it calls man:"
-"pam_close_session[3] to tear down the session."
+"Once the server is done serving the client, it calls "
+"man:pam_close_session[3] to tear down the session."
 msgstr ""
 
 #. type: Plain text
@@ -998,8 +1000,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/pam/_index.adoc:384
 msgid ""
-"These per-service policy files have only four fields instead of [."
-"filename]#pam.conf#'s five: the service name field is omitted.  Thus, "
+"These per-service policy files have only four fields instead of "
+"[.filename]#pam.conf#'s five: the service name field is omitted.  Thus, "
 "instead of the sample [.filename]#pam.conf# line from the previous section, "
 "one would have the following line in [.filename]#/etc/pam.d/login#:"
 msgstr ""
@@ -1038,8 +1040,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/pam/_index.adoc:402
 msgid ""
-"Since each service's policy is stored in a separate file, the [."
-"filename]#pam.d# mechanism also makes it very easy to install additional "
+"Since each service's policy is stored in a separate file, the "
+"[.filename]#pam.d# mechanism also makes it very easy to install additional "
 "policies for third-party software packages."
 msgstr ""
 
@@ -1099,8 +1101,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/pam/_index.adoc:423
 msgid ""
-"The facility is one of the four facility keywords described in crossref:"
-"pam[pam-facilities-primitives, Facilities and Primitives]."
+"The facility is one of the four facility keywords described in "
+"crossref:pam[pam-facilities-primitives, Facilities and Primitives]."
 msgstr ""
 
 #. type: Plain text
@@ -1341,10 +1343,10 @@ msgstr ""
 #: documentation/content/en/articles/pam/_index.adoc:515
 msgid ""
 "The man:pam_group[8] module accepts or rejects applicants on the basis of "
-"their membership in a particular file group (normally `wheel` for man:"
-"su[1]).  It is primarily intended for maintaining the traditional behavior "
-"of BSD man:su[1], but has many other uses, such as excluding certain groups "
-"of users from a particular service."
+"their membership in a particular file group (normally `wheel` for "
+"man:su[1]).  It is primarily intended for maintaining the traditional "
+"behavior of BSD man:su[1], but has many other uses, such as excluding "
+"certain groups of users from a particular service."
 msgstr ""
 
 #. type: Title ===
@@ -1482,8 +1484,8 @@ msgstr ""
 msgid ""
 "The man:pam_rootok[8] module reports success if and only if the real user id "
 "of the process calling it (which is assumed to be run by the applicant) is "
-"0.  This is useful for non-networked services such as man:su[1] or man:"
-"passwd[1], to which the `root` should have automatic access."
+"0.  This is useful for non-networked services such as man:su[1] or "
+"man:passwd[1], to which the `root` should have automatic access."
 msgstr ""
 
 #. type: Title ===
