--- a/documentation/content/en/articles/pgpkeys/_index.po
+++ b/documentation/content/en/articles/pgpkeys/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"POT-Creation-Date: 2026-02-22 15:58+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2972,50 +2972,68 @@ msgstr ""
 msgid "`{alven}`"
 msgstr ""
 
-#. type: Title ==
-#: documentation/content/en/articles/pgpkeys/_index.adoc:1540
+#. type: Title ===
+#: documentation/content/en/articles/pgpkeys/_index.adoc:1539
 #, no-wrap
-msgid "Other Cluster Account Holders"
+msgid "`{pouria}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1542
 #, no-wrap
-msgid "`{bk}`"
+msgid "`{siva}`"
 msgstr ""
 
-#. type: Title ===
-#: documentation/content/en/articles/pgpkeys/_index.adoc:1545
+#. type: Title ==
+#: documentation/content/en/articles/pgpkeys/_index.adoc:1546
 #, no-wrap
-msgid "`{deb}`"
+msgid "Other Cluster Account Holders"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1548
 #, no-wrap
-msgid "`{debdrup}`"
+msgid "`{bk}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1551
 #, no-wrap
-msgid "`{dutchdaemon}`"
+msgid "`{deb}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1554
 #, no-wrap
-msgid "`{keymaster}`"
+msgid "`{debdrup}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1557
 #, no-wrap
-msgid "`{mwlucas}`"
+msgid "`{dutchdaemon}`"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/articles/pgpkeys/_index.adoc:1560
 #, no-wrap
+msgid "`{keymaster}`"
+msgstr ""
+
+#. type: Title ===
+#: documentation/content/en/articles/pgpkeys/_index.adoc:1563
+#, no-wrap
+msgid "`{mwlucas}`"
+msgstr ""
+
+#. type: Title ===
+#: documentation/content/en/articles/pgpkeys/_index.adoc:1566
+#, no-wrap
 msgid "`{dhw}`"
+msgstr ""
+
+#. type: Title ===
+#: documentation/content/en/articles/pgpkeys/_index.adoc:1569
+#, no-wrap
+msgid "`{tpearson}`"
 msgstr ""
