--- a/documentation/content/en/books/developers-handbook/sockets/_index.po
+++ b/documentation/content/en/books/developers-handbook/sockets/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:56-0300\n"
+"POT-Creation-Date: 2026-02-22 15:58+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -738,7 +738,7 @@ msgid ""
 "write a text string representing the current date and time to port 13.  We "
 "want to use TCP/IP, so we need to specify `AF_INET` in the address family "
 "field.  `AF_INET` is defined as `2`.  Let us use the IP address of "
-"`192.43.244.18`, which is the time server of US federal government "
+"`132.163.96.1`, which is the time server of US federal government "
 "(`time.nist.gov`)."
 msgstr ""
 
@@ -781,7 +781,7 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/developers-handbook/sockets/_index.adoc:406
 msgid ""
-"The `192.43.244.18` is just a convenient notation of expressing a 32-bit "
+"The `132.163.96.1` is just a convenient notation of expressing a 32-bit "
 "integer by listing all of its 8-bit bytes, starting with the _most "
 "significant_ one."
 msgstr ""
@@ -805,7 +805,7 @@ msgstr ""
 msgid ""
 "sa.sin_family      = AF_INET;\n"
 "sa.sin_port        = 13;\n"
-"sa.sin_addr.s_addr = (((((192 << 8) | 43) << 8) | 244) << 8) | 18;\n"
+"sa.sin_addr.s_addr = (((((132 << 8) | 163) << 8) | 96) << 8) | 1;\n"
 msgstr ""
 
 #. type: Plain text
@@ -992,7 +992,7 @@ msgstr ""
 msgid ""
 "sa.sin_family      = AF_INET;\n"
 "sa.sin_port        = 13 << 8;\n"
-"sa.sin_addr.s_addr = (((((18 << 8) | 244) << 8) | 43) << 8) | 192;\n"
+"sa.sin_addr.s_addr = (((((1 << 8) | 96) << 8) | 163) << 8) | 132;\n"
 msgstr ""
 
 #. type: Plain text
@@ -1133,7 +1133,7 @@ msgstr ""
 #: documentation/content/en/books/developers-handbook/sockets/_index.adoc:550
 msgid ""
 "We now know enough to write a very simple client, one that will get current "
-"time from `192.43.244.18` and print it to [.filename]#stdout#."
+"time from `132.163.96.1` and print it to [.filename]#stdout#."
 msgstr ""
 
 #. type: delimited block . 4
@@ -1187,7 +1187,7 @@ msgstr ""
 msgid ""
 "  sa.sin_family = AF_INET;\n"
 "  sa.sin_port = htons(13);\n"
-"  sa.sin_addr.s_addr = htonl((((((192 << 8) | 43) << 8) | 244) << 8) | 18);\n"
+"  sa.sin_addr.s_addr = htonl((((((132 << 8) | 163) << 8) | 96) << 8) | 1);\n"
 "  if (connect(s, (struct sockaddr *)&sa, sizeof sa) < 0) {\n"
 "    perror(\"connect\");\n"
 "    close(s);\n"
@@ -1628,12 +1628,12 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/developers-handbook/sockets/_index.adoc:806
 msgid ""
-"Its value is `0`.  Since we have just used `bzero` on the entire structure, "
-"it would be redundant to set it to `0` again.  But if we port our code to "
-"some other system where INADDR_ANY is perhaps not a zero, we need to assign "
-"it to `sa.sin_addr.s_addr`.  Most modern C compilers are clever enough to "
-"notice that INADDR_ANY is a constant.  As long as it is a zero, they will "
-"optimize the entire conditional statement out of the code."
+"Its value is `0`.  Since we have just used `memset` to set zeroes on the "
+"entire structure, it would be redundant to set it to `0` again.  But if we "
+"port our code to some other system where INADDR_ANY is perhaps not a zero, "
+"we need to assign it to `sa.sin_addr.s_addr`.  Most modern C compilers are "
+"clever enough to notice that INADDR_ANY is a constant.  As long as it is a "
+"zero, they will optimize the entire conditional statement out of the code."
 msgstr ""
 
 #. type: Plain text
@@ -2056,7 +2056,7 @@ msgid ""
 "We now can type a domain name (or an IP address, it works both ways) on the "
 "command line, and the program will try to connect to its _daytime_ server.  "
 "Otherwise, it will still default to `time.nist.gov`.  However, even in this "
-"case we will use `gethostbyname` rather than hard coding `192.43.244.18`.  "
+"case we will use `gethostbyname` rather than hard coding `132.163.96.1`.  "
 "That way, even if its IP address changes in the future, we will still find "
 "it."
 msgstr ""
