--- a/documentation/content/en/books/faq/_index.po
+++ b/documentation/content/en/books/faq/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-06-29 21:20+0100\n"
+"POT-Creation-Date: 2026-02-22 15:58+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -140,7 +140,7 @@ msgstr ""
 #. type: Title ===
 #: documentation/content/en/books/faq/_index.adoc:89
 #, no-wrap
-msgid "What uses cases is FreeBSD good for?"
+msgid "What use cases is FreeBSD good for?"
 msgstr ""
 
 #. type: Plain text
