--- a/documentation/content/en/books/fdp-primer/doc-build/_index.po
+++ b/documentation/content/en/books/fdp-primer/doc-build/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:56-0300\n"
+"POT-Creation-Date: 2026-02-22 15:58+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -447,8 +447,8 @@ msgstr ""
 msgid ""
 "# Generate the FreeBSD documentation\n"
 "#\n"
-"# Copyright (c) 2020-2025, The FreeBSD Documentation Project\n"
-"# Copyright (c) 2020-2025, Sergio Carlavilla <carlavilla@FreeBSD.org>\n"
+"# Copyright (c) 2020-2026, The FreeBSD Documentation Project\n"
+"# Copyright (c) 2020-2026, Sergio Carlavilla <carlavilla@FreeBSD.org>\n"
 "#\n"
 "# Targets intended for use on the command line\n"
 "#\n"
@@ -1026,8 +1026,8 @@ msgstr ""
 msgid ""
 "# Generate the FreeBSD website\n"
 "#\n"
-"# Copyright (c) 2020-2025, The FreeBSD Documentation Project\n"
-"# Copyright (c) 2020-2025, Sergio Carlavilla <carlavilla@FreeBSD.org>\n"
+"# Copyright (c) 2020-2026, The FreeBSD Documentation Project\n"
+"# Copyright (c) 2020-2026, Sergio Carlavilla <carlavilla@FreeBSD.org>\n"
 "#\n"
 "# Targets intended for use on the command line\n"
 "#\n"
