--- a/documentation/content/en/books/handbook/filesystems/_index.po
+++ b/documentation/content/en/books/handbook/filesystems/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"POT-Creation-Date: 2026-02-22 15:58+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -239,7 +239,7 @@ msgstr ""
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/filesystems/_index.adoc:135
 #, no-wrap
-msgid "# pkg install exfat\n"
+msgid "# pkg install fusefs-exfat\n"
 msgstr ""
 
 #. type: Plain text
@@ -316,7 +316,7 @@ msgstr ""
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/filesystems/_index.adoc:172
 #, no-wrap
-msgid "# pkg install ntfs\n"
+msgid "# pkg install fusefs-ntfs\n"
 msgstr ""
 
 #. type: Plain text
