--- a/documentation/content/en/books/handbook/firewalls/_index.po
+++ b/documentation/content/en/books/handbook/firewalls/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"POT-Creation-Date: 2026-02-22 15:58+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -5157,53 +5157,54 @@ msgstr ""
 #. type: Title ==
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:2455
 #, no-wrap
-msgid "Blacklistd"
+msgid "Blocklistd"
 msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:2462
 msgid ""
-"Blacklistd is a daemon listening to sockets awaiting to receive "
+"Blocklistd is a daemon listening to sockets awaiting to receive "
 "notifications from other daemons about connection attempts that failed or "
 "were successful.  It is most widely used in blocking too many connection "
 "attempts on open ports.  A prime example is SSH running on the internet "
 "getting a lot of requests from bots or scripts trying to guess passwords and "
-"gain access.  Using blacklistd, the daemon can notify the firewall to create "
+"gain access.  Using blocklistd, the daemon can notify the firewall to create "
 "a filter rule to block excessive connection attempts from a single source "
-"after a number of tries. Blacklistd was first developed on NetBSD and "
-"appeared there in version 7.  FreeBSD 11 imported blacklistd from NetBSD."
+"after a number of tries. Blocklistd was first developed on NetBSD and "
+"appeared there in version 7, it was originally called blacklistd.  FreeBSD "
+"11 imported blocklistd from NetBSD."
 msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:2467
 msgid ""
-"This chapter describes how to set up blacklistd, configure it, and provides "
+"This chapter describes how to set up blocklistd, configure it, and provides "
 "examples on how to use it.  Readers should be familiar with basic firewall "
 "concepts like rules.  For details, refer to the firewall chapter.  PF is "
 "used in the examples, but other firewalls available on FreeBSD should be "
-"able to work with blacklistd, too."
+"able to work with blocklistd, too."
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:2468
 #, no-wrap
-msgid "Enabling Blacklistd"
+msgid "Enabling Blocklistd"
 msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:2474
 msgid ""
-"The main configuration for blacklistd is stored in man:blacklistd.conf[5].  "
-"Various command line options are also available to change blacklistd's run-"
+"The main configuration for blocklistd is stored in man:blocklistd.conf[5].  "
+"Various command line options are also available to change blocklistd's run-"
 "time behavior.  Persistent configuration across reboots should be stored in "
-"[.filename]#/etc/blacklistd.conf#.  To enable the daemon during system boot, "
-"add a `blacklistd_enable` line to [.filename]#/etc/rc.conf# like this:"
+"[.filename]#/etc/blocklistd.conf#.  To enable the daemon during system boot, "
+"add a `blocklistd_enable` line to [.filename]#/etc/rc.conf# like this:"
 msgstr ""
 
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:2478
 #, no-wrap
-msgid "# sysrc blacklistd_enable=yes\n"
+msgid "# sysrc blocklistd_enable=yes\n"
 msgstr ""
 
 #. type: Plain text
@@ -5214,22 +5215,22 @@ msgstr ""
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:2485
 #, no-wrap
-msgid "# service blacklistd start\n"
+msgid "# service blocklistd start\n"
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:2487
 #, no-wrap
-msgid "Creating a Blacklistd Ruleset"
+msgid "Creating a Blocklistd Ruleset"
 msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:2492
 msgid ""
-"Rules for blacklistd are configured in man:blacklistd.conf[5] with one entry "
+"Rules for blocklistd are configured in man:blocklistd.conf[5] with one entry "
 "per line.  Each rule contains a tuple separated by spaces or tabs.  Rules "
 "either belong to a `local` or a `remote`, which applies to the machine where "
-"blacklistd is running or an outside source, respectively."
+"blocklistd is running or an outside source, respectively."
 msgstr ""
 
 #. type: Title ====
@@ -5240,7 +5241,7 @@ msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:2496
-msgid "An example blacklistd.conf entry for a local rule looks like this:"
+msgid "An example blocklistd.conf entry for a local rule looks like this:"
 msgstr ""
 
 #. type: delimited block . 4
@@ -5265,7 +5266,7 @@ msgstr ""
 msgid ""
 "Seven fields separated by either tabs or spaces define a rule.  The first "
 "four fields identify the traffic that should be blocklisted.  The three "
-"fields that follow define backlistd's behavior.  Wildcards are denoted as "
+"fields that follow define blocklistd's behavior.  Wildcards are denoted as "
 "asterisks (`*`), matching anything in this field.  The first field defines "
 "the location.  In local rules, these are the network ports.  The syntax for "
 "the location field is as follows:"
@@ -5295,7 +5296,7 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:2529
 msgid ""
-"A protocol can be used in the third field of a blacklistd rule.  The "
+"A protocol can be used in the third field of a blocklistd rule.  The "
 "following protocols can be used: `tcp`, `udp`, `tcp6`, `udp6`, or numeric.  "
 "A wildcard, like in the example, is typically used to match all protocols "
 "unless there is a reason to distinguish traffic by a certain protocol."
@@ -5313,15 +5314,15 @@ msgstr ""
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:2535
 msgid ""
 "The packet filter rule name is declared by the fifth field, which starts the "
-"behavior part of the rule.  By default, blacklistd puts all blocks under a "
-"pf anchor called `blacklistd` in [.filename]#pf.conf# like this:"
+"behavior part of the rule.  By default, blocklistd puts all blocks under a "
+"pf anchor called `blocklistd` in [.filename]#pf.conf# like this:"
 msgstr ""
 
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:2541
 #, no-wrap
 msgid ""
-"anchor \"blacklistd/*\" in on $ext_if\n"
+"anchor \"blocklistd/*\" in on $ext_if\n"
 "block in\n"
 "pass out\n"
 msgstr ""
@@ -5345,7 +5346,7 @@ msgstr ""
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:2554
 msgid ""
 "With such a rule, any new blocklist rules are added to an anchor called "
-"`blacklistd-ssh`."
+"`blocklistd-ssh`."
 msgstr ""
 
 #. type: Plain text
@@ -5391,7 +5392,7 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:2578
 msgid ""
-"The last field in a blacklistd rule definition specifies how long a host is "
+"The last field in a blocklistd rule definition specifies how long a host is "
 "blocklisted.  The default unit is seconds, but suffixes like `m`, `h`, and "
 "`d` can also be specified for minutes, hours, and days, respectively."
 msgstr ""
@@ -5403,7 +5404,7 @@ msgid ""
 "to SSH will result in a new PF block rule for that host.  Rule matches are "
 "performed by first checking local rules one after another, from most "
 "specific to least specific.  When a match occurs, the `remote` rules are "
-"applied and the name, `nfail`, and disable fields are changed by the "
+"applied and the `name`, `nfail`, and `duration` fields are changed by the "
 "`remote` rule that matched."
 msgstr ""
 
@@ -5416,10 +5417,10 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:2589
 msgid ""
-"Remote rules are used to specify how blacklistd changes its behavior "
+"Remote rules are used to specify how blocklistd changes its behavior "
 "depending on the remote host currently being evaluated.  Each field in a "
 "remote rule is the same as in a local rule.  The only difference is in the "
-"way blacklistd is using them.  To explain it, this example rule is used:"
+"way blocklistd is using them.  To explain it, this example rule is used:"
 msgstr ""
 
 #. type: delimited block . 4
@@ -5443,11 +5444,11 @@ msgstr ""
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:2605
 msgid ""
 "The name fields is different though: the equal sign (`=`) in a remote rule "
-"tells blacklistd to use the value from the matching local rule.  It means "
+"tells blocklistd to use the value from the matching local rule.  It means "
 "that the firewall rule entry is taken and the `/25` prefix (a netmask of "
 "`255.255.255.128`) is added.  When a connection from that address range is "
 "blocklisted, the entire subnet is affected.  A PF anchor name can also be "
-"used here, in which case blacklistd will add rules for this address block to "
+"used here, in which case blocklistd will add rules for this address block to "
 "the anchor of that name.  The default table is used when a wildcard is "
 "specified."
 msgstr ""
@@ -5471,22 +5472,23 @@ msgstr ""
 #. type: Title ===
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:2612
 #, no-wrap
-msgid "Blacklistd Client Configuration"
+msgid "Blocklistd Client Configuration"
 msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:2617
 msgid ""
-"There are a few software packages in FreeBSD that can utilize blacklistd's "
-"functionality.  The two most prominent ones are man:ftpd[8] and man:sshd[8] "
-"to block excessive connection attempts.  To activate blacklistd in the SSH "
-"daemon, add the following line to [.filename]#/etc/ssh/sshd_config#:"
+"There are a few software packages in FreeBSD that can utilize blocklistd's "
+"functionality.  The two most prominent ones are package:ftp/freebsd-ftpd[] "
+"and man:sshd[8] to block excessive connection attempts.  To activate "
+"blocklistd in the SSH daemon, add the following line to [.filename]#/etc/ssh/"
+"sshd_config#:"
 msgstr ""
 
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:2621
 #, no-wrap
-msgid "UseBlacklist yes\n"
+msgid "UseBlocklist yes\n"
 msgstr ""
 
 #. type: Plain text
@@ -5497,8 +5499,9 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:2626
 msgid ""
-"Blacklisting for man:ftpd[8] is enabled using `-B`, either in [.filename]#/"
-"etc/inetd.conf# or as a flag in [.filename]#/etc/rc.conf# like this:"
+"Blocklisting for package:ftp/freebsd-ftpd[] is enabled using `-B`, either in "
+"[.filename]#/etc/inetd.conf# or as a flag in [.filename]#/etc/rc.conf# like "
+"this:"
 msgstr ""
 
 #. type: delimited block . 4
@@ -5509,21 +5512,21 @@ msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:2633
-msgid "That is all that is needed to make these programs talk to blacklistd."
+msgid "That is all that is needed to make these programs talk to blocklistd."
 msgstr ""
 
 #. type: Title ===
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:2634
 #, no-wrap
-msgid "Blacklistd Management"
+msgid "Blocklistd Management"
 msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:2639
 msgid ""
-"Blacklistd provides the user with a management utility called "
-"man:blacklistctl[8].  It displays blocked addresses and networks that are "
-"blocklisted by the rules defined in man:blacklistd.conf[5].  To see the list "
+"Blocklistd provides the user with a management utility called "
+"man:blocklistctl[8].  It displays blocked addresses and networks that are "
+"blocklisted by the rules defined in man:blocklistd.conf[5].  To see the list "
 "of currently blocked hosts, use `dump` combined with `-b` like this."
 msgstr ""
 
@@ -5531,9 +5534,9 @@ msgstr ""
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:2645
 #, no-wrap
 msgid ""
-"# blacklistctl dump -b\n"
-"      address/ma:port id      nfail   last access\n"
-"213.0.123.128/25:22   OK      6/3     2019/06/08 14:30:19\n"
+"# blocklistctl dump -b\n"
+"rulename                address/ma:port id      nfail   last access\n"
+"blocklistd        213.0.123.128/25:22   OK      6/3     2019/06/08 14:30:19\n"
 msgstr ""
 
 #. type: Plain text
@@ -5543,7 +5546,7 @@ msgid ""
 "22 coming from the address range `213.0.123.128/25`.  There are more "
 "attempts listed than are allowed because SSH allows a client to try multiple "
 "logins on a single TCP connection.  A connection that is currently going on "
-"is not stopped by blacklistd.  The last connection attempt is listed in the "
+"is not stopped by blocklistd.  The last connection attempt is listed in the "
 "`last access` column of the output."
 msgstr ""
 
@@ -5558,9 +5561,9 @@ msgstr ""
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:2659
 #, no-wrap
 msgid ""
-"# blacklistctl dump -br\n"
-"      address/ma:port id      nfail   remaining time\n"
-"213.0.123.128/25:22   OK      6/3     36s\n"
+"# blocklistctl dump -br\n"
+"rulename                address/ma:port id      nfail   remaining time\n"
+"blocklistd        213.0.123.128/25:22   OK      6/3     36s\n"
 msgstr ""
 
 #. type: Plain text
@@ -5581,11 +5584,11 @@ msgstr ""
 msgid ""
 "Sometimes it is necessary to remove a host from the block list before the "
 "remaining time expires.  Unfortunately, there is no functionality in "
-"blacklistd to do that.  However, it is possible to remove the address from "
+"blocklistd to do that.  However, it is possible to remove the address from "
 "the PF table using pfctl.  For each blocked port, there is a child anchor "
-"inside the blacklistd anchor defined in [.filename]#/etc/pf.conf#.  For "
+"inside the blocklistd anchor defined in [.filename]#/etc/pf.conf#.  For "
 "example, if there is a child anchor for blocking port 22 it is called "
-"`blacklistd/22`.  There is a table inside that child anchor that contains "
+"`blocklistd/22`.  There is a table inside that child anchor that contains "
 "the blocked addresses.  This table is called port followed by the port "
 "number.  In this example, it would be called `port22`.  With that "
 "information at hand, it is now possible to use man:pfctl[8] to display all "
@@ -5596,7 +5599,7 @@ msgstr ""
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:2681
 #, no-wrap
 msgid ""
-"# pfctl -a blacklistd/22 -t port22 -T show\n"
+"# pfctl -a blocklistd/22 -t port22 -T show\n"
 "...\n"
 "213.0.123.128/25\n"
 "...\n"
@@ -5612,15 +5615,15 @@ msgstr ""
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:2688
 #, no-wrap
-msgid "# pfctl -a blacklistd/22 -t port22 -T delete 213.0.123.128/25\n"
+msgid "# pfctl -a blocklistd/22 -t port22 -T delete 213.0.123.128/25\n"
 msgstr ""
 
 #. type: Plain text
 #: documentation/content/en/books/handbook/firewalls/_index.adoc:2692
 msgid ""
 "The address is now removed from PF, but will still show up in the "
-"blacklistctl list, since it does not know about any changes made in PF.  The "
-"entry in blacklistd's database will eventually expire and be removed from "
+"blocklistctl list, since it does not know about any changes made in PF.  The "
+"entry in blocklistd's database will eventually expire and be removed from "
 "its output.  The entry will be added again if the host is matching one of "
-"the block rules in blacklistd again."
+"the block rules in blocklistd again."
 msgstr ""
