--- a/documentation/content/en/books/handbook/glossary.po
+++ b/documentation/content/en/books/handbook/glossary.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"POT-Creation-Date: 2026-02-22 15:58+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1403,8 +1403,9 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/handbook/glossary.adoc:501
 msgid ""
-"A kernel-supported threading system.  See the link:http://www.freebsd.org/"
-"kse[project home page] for further details."
+"A kernel-supported threading system.  See the link:https://"
+"people.freebsd.org/~kuriyama/www/kse[KSE Project home page] for further "
+"details."
 msgstr ""
 
 #. type: Labeled list
