--- a/documentation/content/en/books/handbook/introduction.po
+++ b/documentation/content/en/books/handbook/introduction.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"POT-Creation-Date: 2026-02-22 15:58+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -25,10 +25,11 @@ msgstr ""
 #: documentation/content/en/books/handbook/introduction.adoc:8
 msgid ""
 "Welcome to FreeBSD! This handbook covers the installation and day to day use "
-"of _FreeBSD {rel143-current}-RELEASE_ and _{rel135-current}-RELEASE_.  This "
-"book is the result of ongoing work by many individuals.  Some sections might "
-"be outdated.  Those interested in helping to update and expand this document "
-"should send email to the {freebsd-doc}."
+"of _FreeBSD {rel150-current}-RELEASE_, _FreeBSD {rel143-current}-RELEASE_ "
+"and _{rel135-current}-RELEASE_.  This book is the result of ongoing work by "
+"many individuals.  Some sections might be outdated.  Those interested in "
+"helping to update and expand this document should send email to the {freebsd-"
+"doc}."
 msgstr ""
 
 #. type: Plain text
