--- a/documentation/content/en/books/handbook/introduction/_index.po
+++ b/documentation/content/en/books/handbook/introduction/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"POT-Creation-Date: 2026-02-22 15:58+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -159,7 +159,7 @@ msgid ""
 "a single repository for all of its components, both kernel and userspace. "
 "This, along with a unified and easy to customize build system and a well "
 "thought-out development process makes it easy to integrate FreeBSD with "
-"build infrastructure for own product."
+"build infrastructure for third-party or derived products."
 msgstr ""
 
 #. type: Plain text
