--- a/documentation/content/en/books/handbook/wayland/_index.po
+++ b/documentation/content/en/books/handbook/wayland/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"POT-Creation-Date: 2026-02-22 15:58+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -851,7 +851,7 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/handbook/wayland/_index.adoc:493
 msgid ""
-"Finally, for Hikari, no changes are needed.  Support for `Xwayland` is build "
+"Finally, for Hikari, no changes are needed.  Support for `Xwayland` is built "
 "in by default.  To disable that support, rebuild the package from the ports "
 "collection and disable Xwayland support at that time."
 msgstr ""
