--- a/documentation/content/en/books/porters-handbook/porting-dads/_index.po
+++ b/documentation/content/en/books/porters-handbook/porting-dads/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:56-0300\n"
+"POT-Creation-Date: 2026-02-22 15:58+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -197,7 +197,7 @@ msgstr ""
 #. type: Table
 #: documentation/content/en/books/porters-handbook/porting-dads/_index.adoc:125
 #, no-wrap
-msgid "The architecture as returned by `uname -m` (for example, `i386`)"
+msgid "The architecture as returned by `uname -p` (for example, `i386`)"
 msgstr ""
 
 #. type: Table
