--- a/documentation/content/en/books/porters-handbook/special/_index.po
+++ b/documentation/content/en/books/porters-handbook/special/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"POT-Creation-Date: 2026-02-22 15:58+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -8601,10 +8601,10 @@ msgid ""
 "There are several JDKs in the ports collection, from various vendors, and in "
 "several versions.  If the port must use a particular version, specify it "
 "using the `JAVA_VERSION` variable.  The most current version is package:java/"
-"openjdk18[], with package:java/openjdk17[], package:java/openjdk16[], "
-"package:java/openjdk15[], package:java/openjdk14[], package:java/"
-"openjdk13[], package:java/openjdk12[], package:java/openjdk11[], "
-"package:java/openjdk8[], and package:java/openjdk7[] also available."
+"openjdk25[], with package:java/openjdk24[], package:java/openjdk23[], "
+"package:java/openjdk22[], package:java/openjdk21[], package:java/"
+"openjdk20[], package:java/openjdk17[], package:java/openjdk11[], and "
+"package:java/openjdk8[], also available."
 msgstr ""
 
 #. type: Block title
