--- a/documentation/content/en/articles/ipsec-must/_index.po
+++ b/documentation/content/en/articles/ipsec-must/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"POT-Creation-Date: 2026-02-22 15:58+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -49,8 +49,8 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/articles/ipsec-must/_index.adoc:58
 msgid ""
-"First, lets assume you have crossref::ipsec-must[ipsec-install, Installing "
-"IPsec].  How do you know it is crossref::ipsec-must[caveat, Caveat]? Sure, "
+"First, lets assume you have crossref:ipsec-must[ipsec-install, Installing "
+"IPsec].  How do you know it is crossref:ipsec-must[caveat, Caveat]? Sure, "
 "your connection will not work if it is misconfigured, and it will work when "
 "you finally get it right.  man:netstat[1] will list it. But can you "
 "independently confirm it?"
@@ -103,7 +103,7 @@ msgid ""
 "Generators\"(https://web.archive.org/web/20011115002319/http://"
 "www.geocities.com/SiliconValley/Code/4704/universal.pdf[MUST]) quickly "
 "measures the entropy of a sample.  It uses a compression-like algorithm.  "
-"crossref::ipsec-must[code, Maurer's Universal Statistical Test (for block "
+"crossref:ipsec-must[code, Maurer's Universal Statistical Test (for block "
 "size8 bits)] for a variant which measures successive (~quarter megabyte) "
 "chunks of a file."
 msgstr ""
@@ -119,7 +119,7 @@ msgstr ""
 msgid ""
 "We also need a way to capture the raw network data.  A program called "
 "man:tcpdump[1] lets you do this, if you have enabled the _Berkeley Packet "
-"Filter_ interface in your crossref::ipsec-must[kernel,src/sys/i386/conf/"
+"Filter_ interface in your crossref:ipsec-must[kernel,src/sys/i386/conf/"
 "KERNELNAME]."
 msgstr ""
 
@@ -159,7 +159,7 @@ msgstr ""
 
 #. type: delimited block = 4
 #: documentation/content/en/articles/ipsec-must/_index.adoc:104
-msgid "Now start crossref::ipsec-must[tcpdump, Tcpdump]."
+msgid "Now start crossref:ipsec-must[tcpdump, Tcpdump]."
 msgstr ""
 
 #. type: delimited block = 4
@@ -173,7 +173,7 @@ msgstr ""
 #. type: delimited block = 4
 #: documentation/content/en/articles/ipsec-must/_index.adoc:106
 msgid ""
-"Now run crossref::ipsec-must[code, Maurer's Universal Statistical Test (for "
+"Now run crossref:ipsec-must[code, Maurer's Universal Statistical Test (for "
 "block size8 bits)] on the captured packets. You should see something like "
 "the following. The important thing to note is that the secure connection has "
 "93% (6.7) of the expected value (7.18), and the \"normal\" connection has "
