--- a/documentation/content/en/books/handbook/bsdinstall/_index.po
+++ b/documentation/content/en/books/handbook/bsdinstall/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"POT-Creation-Date: 2026-02-22 15:58+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -429,7 +429,8 @@ msgid ""
 "After downloading the image file, download at least one _checksum_ file from "
 "the same directory.  There are two _checksum_ files available, named after "
 "the release number and the architecture name.  For example: `CHECKSUM.SHA256-"
-"FreeBSD-13.1-RELEASE-amd64` and `CHECKSUM.SHA512-FreeBSD-13.1-RELEASE-amd64`."
+"FreeBSD-{rel-latest}-RELEASE-amd64` and `CHECKSUM.SHA512-FreeBSD-{rel-"
+"latest}-RELEASE-amd64`."
 msgstr ""
 
 #. type: delimited block = 4
@@ -454,8 +455,8 @@ msgstr ""
 #: documentation/content/en/books/handbook/bsdinstall/_index.adoc:198
 #, no-wrap
 msgid ""
-"% sha256sum -c CHECKSUM.SHA256-FreeBSD-13.1-RELEASE-amd64 FreeBSD-13.1-RELEASE-amd64-dvd1.iso\n"
-"FreeBSD-13.1-RELEASE-amd64-dvd1.iso: OK\n"
+"% sha256sum -c CHECKSUM.SHA256-FreeBSD-{rel-latest}-RELEASE-amd64 --ignore-missing\n"
+"FreeBSD-{rel-latest}-RELEASE-amd64-dvd1.iso: OK\n"
 msgstr ""
 
 #. type: Plain text
@@ -514,7 +515,7 @@ msgstr ""
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/bsdinstall/_index.adoc:233
 #, no-wrap
-msgid "# dd if=FreeBSD-13.1-RELEASE-amd64-memstick.img of=/dev/da0 bs=1M conv=sync\n"
+msgid "# dd if=FreeBSD-{rel-latest}-RELEASE-amd64-memstick.img of=/dev/da0 bs=1M conv=sync\n"
 msgstr ""
 
 #. type: Plain text
