--- a/documentation/content/en/books/handbook/jails/_index.po
+++ b/documentation/content/en/books/handbook/jails/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"POT-Creation-Date: 2026-02-22 15:58+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -897,7 +897,7 @@ msgstr ""
 #: documentation/content/en/books/handbook/jails/_index.adoc:462
 #: documentation/content/en/books/handbook/jails/_index.adoc:566
 #, no-wrap
-msgid "# fetch https://download.freebsd.org/ftp/releases/amd64/amd64/{betarel-current}-RELEASE/base.txz -o /usr/local/jails/media/{betarel-current}-RELEASE-base.txz\n"
+msgid "# fetch https://download.freebsd.org/ftp/releases/amd64/amd64/{rel-latest}-RELEASE/base.txz -o /usr/local/jails/media/{rel-latest}-RELEASE-base.txz\n"
 msgstr ""
 
 #. type: Plain text
@@ -919,7 +919,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "# mkdir -p /usr/local/jails/containers/classic\n"
-"# tar -xf /usr/local/jails/media/{betarel-current}-RELEASE-base.txz -C /usr/local/jails/containers/classic --unlink\n"
+"# tar -xf /usr/local/jails/media/{rel-latest}-RELEASE-base.txz -C /usr/local/jails/containers/classic --unlink\n"
 msgstr ""
 
 #. type: Plain text
@@ -1078,7 +1078,7 @@ msgstr ""
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/jails/_index.adoc:455
 #, no-wrap
-msgid "# zfs create -p zroot/jails/templates/{betarel-current}-RELEASE\n"
+msgid "# zfs create -p zroot/jails/templates/{rel-latest}-RELEASE\n"
 msgstr ""
 
 #. type: Plain text
@@ -1098,7 +1098,7 @@ msgstr ""
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/jails/_index.adoc:469
 #, no-wrap
-msgid "# tar -xf /usr/local/jails/media/{betarel-current}-RELEASE-base.txz -C /usr/local/jails/templates/{betarel-current}-RELEASE --unlink\n"
+msgid "# tar -xf /usr/local/jails/media/{rel-latest}-RELEASE-base.txz -C /usr/local/jails/templates/{rel-latest}-RELEASE --unlink\n"
 msgstr ""
 
 #. type: Plain text
@@ -1113,8 +1113,8 @@ msgstr ""
 #: documentation/content/en/books/handbook/jails/_index.adoc:477
 #, no-wrap
 msgid ""
-"# cp /etc/resolv.conf /usr/local/jails/templates/{betarel-current}-RELEASE/etc/resolv.conf\n"
-"# cp /etc/localtime /usr/local/jails/templates/{betarel-current}-RELEASE/etc/localtime\n"
+"# cp /etc/resolv.conf /usr/local/jails/templates/{rel-latest}-RELEASE/etc/resolv.conf\n"
+"# cp /etc/localtime /usr/local/jails/templates/{rel-latest}-RELEASE/etc/localtime\n"
 msgstr ""
 
 #. type: Plain text
@@ -1127,7 +1127,7 @@ msgstr ""
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/jails/_index.adoc:484
 #, no-wrap
-msgid "# freebsd-update -b /usr/local/jails/templates/{betarel-current}-RELEASE/ fetch install\n"
+msgid "# freebsd-update -b /usr/local/jails/templates/{rel-latest}-RELEASE/ fetch install\n"
 msgstr ""
 
 #. type: Plain text
@@ -1145,7 +1145,7 @@ msgstr ""
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/jails/_index.adoc:493
 #, no-wrap
-msgid "# zfs snapshot zroot/jails/templates/{betarel-current}-RELEASE@base\n"
+msgid "# zfs snapshot zroot/jails/templates/{rel-latest}-RELEASE@base\n"
 msgstr ""
 
 #. type: Plain text
@@ -1163,7 +1163,7 @@ msgstr ""
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/jails/_index.adoc:502
 #, no-wrap
-msgid "# zfs clone zroot/jails/templates/{betarel-current}-RELEASE@base zroot/jails/containers/thinjail\n"
+msgid "# zfs clone zroot/jails/templates/{rel-latest}-RELEASE@base zroot/jails/containers/thinjail\n"
 msgstr ""
 
 #. type: delimited block . 4
@@ -1219,7 +1219,7 @@ msgstr ""
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/jails/_index.adoc:552
 #, no-wrap
-msgid "# zfs create -p zroot/jails/templates/{betarel-current}-RELEASE-base\n"
+msgid "# zfs create -p zroot/jails/templates/{rel-latest}-RELEASE-base\n"
 msgstr ""
 
 #. type: Plain text
@@ -1230,13 +1230,13 @@ msgstr ""
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/jails/_index.adoc:559
 #, no-wrap
-msgid "# mkdir /usr/local/jails/templates/{betarel-current}-RELEASE-base\n"
+msgid "# mkdir /usr/local/jails/templates/{rel-latest}-RELEASE-base\n"
 msgstr ""
 
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/jails/_index.adoc:573
 #, no-wrap
-msgid "# tar -xf /usr/local/jails/media/{betarel-current}-RELEASE-base.txz -C /usr/local/jails/templates/{betarel-current}-RELEASE-base --unlink\n"
+msgid "# tar -xf /usr/local/jails/media/{rel-latest}-RELEASE-base.txz -C /usr/local/jails/templates/{rel-latest}-RELEASE-base --unlink\n"
 msgstr ""
 
 #. type: Plain text
@@ -1251,8 +1251,8 @@ msgstr ""
 #: documentation/content/en/books/handbook/jails/_index.adoc:581
 #, no-wrap
 msgid ""
-"# cp /etc/resolv.conf /usr/local/jails/templates/{betarel-current}-RELEASE-base/etc/resolv.conf\n"
-"# cp /etc/localtime /usr/local/jails/templates/{betarel-current}-RELEASE-base/etc/localtime\n"
+"# cp /etc/resolv.conf /usr/local/jails/templates/{rel-latest}-RELEASE-base/etc/resolv.conf\n"
+"# cp /etc/localtime /usr/local/jails/templates/{rel-latest}-RELEASE-base/etc/localtime\n"
 msgstr ""
 
 #. type: Plain text
@@ -1265,7 +1265,7 @@ msgstr ""
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/jails/_index.adoc:588
 #, no-wrap
-msgid "# freebsd-update -b /usr/local/jails/templates/{betarel-current}-RELEASE-base/ fetch install\n"
+msgid "# freebsd-update -b /usr/local/jails/templates/{rel-latest}-RELEASE-base/ fetch install\n"
 msgstr ""
 
 #. type: Plain text
@@ -1286,7 +1286,7 @@ msgstr ""
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/jails/_index.adoc:598
 #, no-wrap
-msgid "# zfs create -p zroot/jails/templates/{betarel-current}-RELEASE-skeleton\n"
+msgid "# zfs create -p zroot/jails/templates/{rel-latest}-RELEASE-skeleton\n"
 msgstr ""
 
 #. type: Plain text
@@ -1297,7 +1297,7 @@ msgstr ""
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/jails/_index.adoc:605
 #, no-wrap
-msgid "# mkdir /usr/local/jails/templates/{betarel-current}-RELEASE-skeleton\n"
+msgid "# mkdir /usr/local/jails/templates/{rel-latest}-RELEASE-skeleton\n"
 msgstr ""
 
 #. type: Plain text
@@ -1316,13 +1316,13 @@ msgstr ""
 #: documentation/content/en/books/handbook/jails/_index.adoc:621
 #, no-wrap
 msgid ""
-"# mkdir -p /usr/local/jails/templates/{betarel-current}-RELEASE-skeleton/home\n"
-"# mkdir -p /usr/local/jails/templates/{betarel-current}-RELEASE-skeleton/usr\n"
-"# mv /usr/local/jails/templates/{betarel-current}-RELEASE-base/etc /usr/local/jails/templates/{betarel-current}-RELEASE-skeleton/etc\n"
-"# mv /usr/local/jails/templates/{betarel-current}-RELEASE-base/usr/local /usr/local/jails/templates/{betarel-current}-RELEASE-skeleton/usr/local\n"
-"# mv /usr/local/jails/templates/{betarel-current}-RELEASE-base/tmp /usr/local/jails/templates/{betarel-current}-RELEASE-skeleton/tmp\n"
-"# mv /usr/local/jails/templates/{betarel-current}-RELEASE-base/var /usr/local/jails/templates/{betarel-current}-RELEASE-skeleton/var\n"
-"# mv /usr/local/jails/templates/{betarel-current}-RELEASE-base/root /usr/local/jails/templates/{betarel-current}-RELEASE-skeleton/root\n"
+"# mkdir -p /usr/local/jails/templates/{rel-latest}-RELEASE-skeleton/home\n"
+"# mkdir -p /usr/local/jails/templates/{rel-latest}-RELEASE-skeleton/usr\n"
+"# mv /usr/local/jails/templates/{rel-latest}-RELEASE-base/etc /usr/local/jails/templates/{rel-latest}-RELEASE-skeleton/etc\n"
+"# mv /usr/local/jails/templates/{rel-latest}-RELEASE-base/usr/local /usr/local/jails/templates/{rel-latest}-RELEASE-skeleton/usr/local\n"
+"# mv /usr/local/jails/templates/{rel-latest}-RELEASE-base/tmp /usr/local/jails/templates/{rel-latest}-RELEASE-skeleton/tmp\n"
+"# mv /usr/local/jails/templates/{rel-latest}-RELEASE-base/var /usr/local/jails/templates/{rel-latest}-RELEASE-skeleton/var\n"
+"# mv /usr/local/jails/templates/{rel-latest}-RELEASE-base/root /usr/local/jails/templates/{rel-latest}-RELEASE-skeleton/root\n"
 msgstr ""
 
 #. type: Plain text
@@ -1336,7 +1336,7 @@ msgstr ""
 #: documentation/content/en/books/handbook/jails/_index.adoc:635
 #, no-wrap
 msgid ""
-"# cd /usr/local/jails/templates/{betarel-current}-RELEASE-base/\n"
+"# cd /usr/local/jails/templates/{rel-latest}-RELEASE-base/\n"
 "# mkdir skeleton\n"
 "# ln -s skeleton/etc etc\n"
 "# ln -s skeleton/home home\n"
@@ -1364,8 +1364,8 @@ msgstr ""
 #: documentation/content/en/books/handbook/jails/_index.adoc:645
 #, no-wrap
 msgid ""
-"# zfs snapshot zroot/jails/templates/{betarel-current}-RELEASE-skeleton@base\n"
-"# zfs clone zroot/jails/templates/{betarel-current}-RELEASE-skeleton@base zroot/jails/containers/thinjail\n"
+"# zfs snapshot zroot/jails/templates/{rel-latest}-RELEASE-skeleton@base\n"
+"# zfs clone zroot/jails/templates/{rel-latest}-RELEASE-skeleton@base zroot/jails/containers/thinjail\n"
 msgstr ""
 
 #. type: Plain text
@@ -1378,7 +1378,7 @@ msgstr ""
 #. type: delimited block . 4
 #: documentation/content/en/books/handbook/jails/_index.adoc:652
 #, no-wrap
-msgid "# cp -R /usr/local/jails/templates/{betarel-current}-RELEASE-skeleton /usr/local/jails/containers/thinjail\n"
+msgid "# cp -R /usr/local/jails/templates/{rel-latest}-RELEASE-skeleton /usr/local/jails/containers/thinjail\n"
 msgstr ""
 
 #. type: Plain text
@@ -1439,7 +1439,7 @@ msgstr ""
 #: documentation/content/en/books/handbook/jails/_index.adoc:695
 #, no-wrap
 msgid ""
-"/usr/local/jails/templates/{betarel-current}-RELEASE-base  /usr/local/jails/thinjail-nullfs-base/ nullfs   ro          0 0\n"
+"/usr/local/jails/templates/{rel-latest}-RELEASE-base  /usr/local/jails/thinjail-nullfs-base/ nullfs   ro          0 0\n"
 "/usr/local/jails/containers/thinjail     /usr/local/jails/thinjail-nullfs-base/skeleton nullfs  rw  0 0\n"
 msgstr ""
 
@@ -2559,7 +2559,7 @@ msgstr ""
 #. type: Table
 #: documentation/content/en/books/handbook/jails/_index.adoc:1246
 #, no-wrap
-msgid "link:https://iocage.readthedocs.io/en/latest/[Documentation]"
+msgid "link:https://freebsd.github.io/iocage/[Documentation]"
 msgstr ""
 
 #. type: Table
