--- a/documentation/content/en/books/handbook/x11/_index.po
+++ b/documentation/content/en/books/handbook/x11/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"POT-Creation-Date: 2026-02-22 15:58+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -943,7 +943,7 @@ msgstr ""
 msgid ""
 "Section \"Device\"\n"
 "\tIdentifier \"Card0\"\n"
-"\tDriver     \"nvidia-modeset\"\n"
+"\tDriver     \"nvidia\"\n"
 "EndSection\n"
 msgstr ""
 
@@ -1062,7 +1062,7 @@ msgstr ""
 msgid ""
 "Section \"Device\"\n"
 "\tIdentifier \"Card1\"\n"
-"\tDriver     \"nvidia-modeset\"\n"
+"\tDriver     \"nvidia\"\n"
 "\tBusID     \"pci0:0:2:1\"\n"
 "EndSection\n"
 msgstr ""
