--- a/documentation/content/en/books/handbook/zfs/_index.po
+++ b/documentation/content/en/books/handbook/zfs/_index.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-06-29 21:20+0100\n"
+"POT-Creation-Date: 2026-02-22 15:58+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -4391,7 +4391,7 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/handbook/zfs/_index.adoc:2678
 msgid ""
-"[[zfs-advanced-tuning-prefetch_disable]] `_vfs.zfs.prefetch_disable_` - "
+"[[zfs-advanced-tuning-prefetch_disable]] `_vfs.zfs.prefetch.disable_` - "
 "Disable prefetch. A value of `0` enables and `1` disables it. The default is "
 "`0`, unless the system has less than 4 GB of RAM. Prefetch works by reading "
 "larger blocks than requested into the crossref:zfs[zfs-term-arc,ARC] in "
